# PowerPoint-CLI

./: CMakeLists.txt  README.md  test_lexer  test_lexer.cpp
includes/: cli.h  file_manager.h  lexer.h  parser.h  token.h
src/: cli.cpp  main.cpp  parse.cpp  token.cpp
src/Cli/: cli.cpp
src/Lexer/: lexer.cpp
src/cli/: cli.cpp
src/file_system/: file_manager.cpp
